
set(BASE_SOURCES
    IProgressReporter.hpp
    appbuff.cpp
    append.cpp
    base.cpp
    base.hpp
    cballoc.cpp
    cballoc.hpp
    compiler.hpp
    crashi.cpp
    cstrbuff.cpp
    diag.cpp
    diag.hpp
    diagint.cpp
    diagstr.cpp
    diagstrs.cpp
    DiagStreamType.hpp
    error.cpp
    error.hpp
    filtbuff.cpp
    filter.cpp
    indent.cpp
    infsbuff.cpp
    internal/appbuff.hpp
    internal/append.hpp
    internal/crashi.hpp
    internal/cstrbuff.hpp
    internal/diagstr.hpp
    internal/diagstrs.hpp
    internal/filtbuff.hpp
    internal/infsbuff.hpp
    internal/istrbuff.hpp
    internal/istrimpl.hpp
    internal/lstrbuff.hpp
    internal/ostrbuff.hpp
    internal/periread.hpp
    internal/periwrit.hpp
    internal/perolog.hpp
    internal/persist.hpp
    internal/prepbuff.hpp
    internal/prepend.hpp
    internal/trackeri.hpp
    internal/windstr.hpp
    istr.cpp
    istr.hpp
    istrbuff.cpp
    istrimpl.cpp
    lessptr.hpp
    logbuff.cpp
    logbuff.hpp
    lstrbuff.cpp
    memcdata.cpp
    memcdata.hpp
    memchk.cpp
    memchk.hpp
    memwatch.cpp
    memwatch.hpp
    ostr.cpp
    ostr.hpp
    periread.cpp
    periwrit.cpp
    perolog.cpp
    persist.cpp
    persist.hpp
    poolallo.cpp
    poolallo.hpp
    prepbuff.cpp
    prepend.cpp
    prepost.cpp
    prepost.hpp
    private/diagint.hpp
    private/dualstr.hpp
    private/filter.hpp
    private/indent.hpp
    private/persist.hpp
    private/pertypes.hpp
    private/trace.hpp
    private/tracker.hpp
    trace.cpp
    tracker.cpp
    tracker.hpp
    trackeri.cpp
)

add_library(base ${GAME_COMPONENT_LIB_TYPE} ${BASE_SOURCES})
add_library(LibDev::base ALIAS base)

target_link_libraries(base PUBLIC
    LibDev::stdlib

    spdlog::spdlog
)
