
set(MACHGUI_SOURCES
    GameMenuContext.cpp
    GameMenuContext.hpp
    IInputRegistry.hpp
    InputRegistry.cpp
    MachGuiFPCommand.cpp
    MachGuiFPCommand.hpp
    ProgressIndicator.cpp
    ProgressIndicator.hpp
    ResolvedUiString.cpp
    ResolvedUiString.hpp
    actbmpnm.cpp
    actbmpnm.hpp
    actnamid.cpp
    actnamid.hpp
    animatio.cpp
    animatio.hpp
    autodel.cpp
    autodel.hpp
    bildicns.cpp
    bildicns.hpp
    bildmenu.cpp
    bildmenu.hpp
    bmutext.cpp
    bmutext.hpp
    bufscbut.cpp
    bufscbut.hpp
    buildbar.cpp
    buildbar.hpp
    buildmci.cpp
    buildmci.hpp
    cameras.cpp
    cameras.hpp
    camscrol.cpp
    camscrol.hpp
    chatmsgd.cpp
    chatmsgd.hpp
    chatmsgs.cpp
    chatmsgs.hpp
    chatwind.cpp
    chatwind.hpp
    commands/cmdassem.cpp
    commands/cmdassem.hpp
    commands/cmdattac.cpp
    commands/cmdattac.hpp
    commands/cmdbuild.cpp
    commands/cmdbuild.hpp
    commands/cmdcamo.cpp
    commands/cmdcamo.hpp
    commands/cmdcaptr.cpp
    commands/cmdcaptr.hpp
    commands/cmdconst.cpp
    commands/cmdconst.hpp
    commands/cmddamag.cpp
    commands/cmddamag.hpp
    commands/cmddecon.cpp
    commands/cmddecon.hpp
    commands/cmddefau.cpp
    commands/cmddefau.hpp
    commands/cmddefcn.cpp
    commands/cmddefcn.hpp
    commands/cmddeplo.cpp
    commands/cmddeplo.hpp
    commands/cmddestr.cpp
    commands/cmddestr.hpp
    commands/cmdfrmsq.cpp
    commands/cmdfrmsq.hpp
    commands/cmdheal.cpp
    commands/cmdheal.hpp
    commands/cmdionat.cpp
    commands/cmdionat.hpp
    commands/cmdlmine.cpp
    commands/cmdlmine.hpp
    commands/cmdlocto.cpp
    commands/cmdlocto.hpp
    commands/cmdmove.cpp
    commands/cmdmove.hpp
    commands/cmdnukat.cpp
    commands/cmdnukat.hpp
    commands/cmdpatro.cpp
    commands/cmdpatro.hpp
    commands/cmdpicku.cpp
    commands/cmdpicku.hpp
    commands/cmdrecyc.cpp
    commands/cmdrecyc.hpp
    commands/cmdrefil.cpp
    commands/cmdrefil.hpp
    commands/cmdrepar.cpp
    commands/cmdrepar.hpp
    commands/cmdresea.cpp
    commands/cmdresea.hpp
    commands/cmdscav.cpp
    commands/cmdscav.hpp
    commands/cmdstand.cpp
    commands/cmdstand.hpp
    commands/cmdstop.cpp
    commands/cmdstop.hpp
    commands/cmdtrans.cpp
    commands/cmdtrans.hpp
    commands/cmdtrech.cpp
    commands/cmdtrech.hpp
    commands/command.cpp
    commands/command.hpp
    commands/commandi.cpp
    commands/commandi.hpp
    commbank.cpp
    commbank.hpp
    conselic.cpp
    conselic.hpp
    consicns.cpp
    consicns.hpp
    consmenu.cpp
    consmenu.hpp
    controli.cpp
    controlp.cpp
    controlp.hpp
    corral.cpp
    corral.hpp
    ctrladon.cpp
    ctrladon.hpp
    ctxbrief.cpp
    ctxbrief.hpp
    ctxcamp.cpp
    ctxcamp.hpp
    ctxdebrf.cpp
    ctxdebrf.hpp
    ctxhotky.cpp
    ctxhotky.hpp
    ctxingam.cpp
    ctxingam.hpp
    ctxjoin.cpp
    ctxjoin.hpp
    ctxload.cpp
    ctxload.hpp
    ctxmmenu.cpp
    ctxmmenu.hpp
    ctxmulti.cpp
    ctxmulti.hpp
    ctxoptns.cpp
    ctxoptns.hpp
    ctxready.cpp
    ctxready.hpp
    ctxsave.cpp
    ctxsave.hpp
    ctxscenr.cpp
    ctxscenr.hpp
    ctxsetng.cpp
    ctxsetng.hpp
    ctxsingl.cpp
    ctxsingl.hpp
    ctxskirm.cpp
    ctxskirm.hpp
    ctxstats.cpp
    ctxstats.hpp
    database.cpp
    database.hpp
    databasi.cpp
    dbelemei.cpp
    dbelemen.cpp
    dbelemen.hpp
    dbhandlr.cpp
    dbhandlr.hpp
    dbplanei.cpp
    dbplanet.cpp
    dbplanet.hpp
    dbplayei.cpp
    dbplayer.cpp
    dbplayer.hpp
    dbplysci.cpp
    dbplyscn.cpp
    dbplyscn.hpp
    dbsavgai.cpp
    dbsavgam.cpp
    dbsavgam.hpp
    dbscenai.cpp
    dbscenar.cpp
    dbscenar.hpp
    dbsystei.cpp
    dbsystem.cpp
    dbsystem.hpp
    dbtexdai.cpp
    dbtexdat.cpp
    dbtexdat.hpp
    ddrawdrop.cpp
    ddrawdrop.hpp
    dispmess.cpp
    dispmess.hpp
    dispnoti.cpp
    dispnoti.hpp
    dropdown.cpp
    dropdown.hpp
    dropdwnc.cpp
    dropdwnc.hpp
    editbox.cpp
    editbox.hpp
    editlist.cpp
    editlist.hpp
    factbuff.cpp
    factbuff.hpp
    focusctl.cpp
    focusctl.hpp
    fstpersn.cpp
    fstpersn.hpp
    genstats.cpp
    genstats.hpp
    gui.cpp
    gui.hpp
    guictrl.cpp
    guictrl.hpp
    health.cpp
    health.hpp
    hwrbicns.cpp
    hwrbicns.hpp
    hwrbicon.cpp
    hwrbicon.hpp
    hwrebank.cpp
    hwrebank.hpp
    hwreicns.cpp
    hwreicns.hpp
    hwreicon.cpp
    hwreicon.hpp
    hwremenu.cpp
    hwremenu.hpp
    igcurs2d.cpp
    igcurs2d.hpp
    ingame.cpp
    ingame.hpp
    intcurac.cpp
    intcurac.hpp
    internal/controli.hpp
    internal/databasi.hpp
    internal/dbelemei.hpp
    internal/dbplanei.hpp
    internal/dbplayei.hpp
    internal/dbplysci.hpp
    internal/dbsavgai.hpp
    internal/dbscenai.hpp
    internal/dbsystei.hpp
    internal/dbtexdai.hpp
    internal/igameimp.hpp
    internal/mapareai.hpp
    internal/mgsndman.hpp
    internal/playeri.hpp
    internal/playscri.hpp
    internal/startui.hpp
    internal/strings.hpp
    istype.hpp
    keyboard.cpp
    lsgextra.cpp
    lsgextra.hpp
    machnav.cpp
    machnav.hpp
    map.cpp
    map.hpp
    maparea.cpp
    maparea.hpp
    mapareai.cpp
    mdinternet.cpp
    mdinternet.hpp
    mdipx.cpp
    mdipx.hpp
    mdmodem.cpp
    mdmodem.hpp
    mdnetwork.cpp
    mdnetwork.hpp
    mdserial.cpp
    mdserial.hpp
    messbrok.cpp
    messbrok.hpp
    mextemp.cpp
    mextemp.hpp
    mgsndman.cpp
    msgbox.cpp
    msgbox.hpp
    msgboxei.cpp
    msgboxei.hpp
    numpdrop.cpp
    numpdrop.hpp
    oneicon.cpp
    oneicon.hpp
    optlayout.cpp
    optlayout.hpp
    playeri.cpp
    playerit.cpp
    playerit.hpp
    playscri.cpp
    prodbank.cpp
    prodbank.hpp
    prodicns.cpp
    prodicns.hpp
    prodicon.cpp
    prodicon.hpp
    promtext.cpp
    promtext.hpp
    radar.cpp
    radar.hpp
    restorer.cpp
    restorer.hpp
    root.hpp
    squadron.cpp
    squadron.hpp
    sslistbx.cpp
    sslistbx.hpp
    sslistit.cpp
    sslistit.hpp
    startctx.cpp
    startctx.hpp
    startup.cpp
    startup.hpp
    statbar.cpp
    statbar.hpp
    statdisp.cpp
    statdisp.hpp
    statistics.cpp
    statistics.hpp
    strtdata.cpp
    strtdata.hpp
    sysmess.cpp
    sysmess.hpp
    typemap.cpp
    typemap.hpp
    ui/CheckBox.cpp
    ui/CheckBox.hpp
    ui/MenuButton.cpp
    ui/MenuButton.hpp
    ui/MenuStyle.cpp
    ui/MenuStyle.hpp
    ui/MenuText.cpp
    ui/MenuText.hpp
    ui/ScrollArea.cpp
    ui/ScrollArea.hpp
    ui/ScrollableText.cpp
    ui/ScrollableText.hpp
    ui/SlideBar.cpp
    ui/SlideBar.hpp
    ui/Text.cpp
    ui/Text.hpp
    ui/VerticalScrollBar.cpp
    ui/VerticalScrollBar.hpp
    worldvie.cpp
    worldvie.hpp
    menus_helper.hpp
    menus_helper.cpp
)

add_library(machgui ${GAME_COMPONENT_LIB_TYPE} ${MACHGUI_SOURCES})
add_library(LibDev::machgui ALIAS machgui)

target_link_libraries(machgui PUBLIC
    LibDev::ani
    LibDev::gui
    LibDev::network
)
