
set(PHYS_SOURCES
    absp2d.hpp
    accetumb.cpp
    accetumb.hpp
    accetumi.cpp
    asclplai.cpp
    asclplan.cpp
    asclplan.hpp
    brake.cpp
    brake.hpp
    cmotchun.cpp
    cmotchun.hpp
    crampacc.cpp
    crampacc.hpp
    cs2data1.cpp
    cs2dmarc.cpp
    cs2dmcac.cpp
    cs2dmfnd.cpp
    cs2dmgra.cpp
    cs2dmvtx.cpp
    cs2domai.cpp
    cs2expsp.cpp
    cs2findp.cpp
    cs2impl.cpp
    cs2mochu.cpp
    cs2polyg.cpp
    cs2porta.cpp
    cs2qwrit.cpp
    cs2qwrit.hpp
    cs2vigra.cpp
    cspace2.cpp
    cspace2.hpp
    eulertx.cpp
    eulertx.hpp
    internal/accetumi.hpp
    internal/asclplai.hpp
    internal/cs2dmarc.hpp
    internal/cs2dmarc.ipp
    internal/cs2dmcac.hpp
    internal/cs2dmfnd.hpp
    internal/cs2dmfnd.ipp
    internal/cs2dmgra.hpp
    internal/cs2dmvtx.hpp
    internal/cs2dmvtx.ipp
    internal/cs2domai.hpp
    internal/cs2domai.ipp
    internal/cs2expsp.hpp
    internal/cs2expsp.ipp
    internal/cs2findp.hpp
    internal/cs2findp.ipp
    internal/cs2impl.hpp
    internal/cs2impl.ipp
    internal/cs2mochu.hpp
    internal/cs2mochu.ipp
    internal/cs2polyg.hpp
    internal/cs2polyg.ipp
    internal/cs2porta.hpp
    internal/cs2porta.ipp
    internal/cs2vigra.hpp
    internal/cs2vigra.ipp
    internal/linemtii.hpp
    internal/linetrai.hpp
    internal/lsclplai.hpp
    internal/movespii.hpp
    internal/timeangi.hpp
    internal/timespni.hpp
    jonvec.hpp
    linemoti.cpp
    linemoti.hpp
    linemtii.cpp
    linetrai.cpp
    linetrav.cpp
    linetrav.hpp
    lsclplai.cpp
    lsclplan.cpp
    lsclplan.hpp
    mcfly.cpp
    mcfly.hpp
    mcground.cpp
    mcground.hpp
    mcmotion.cpp
    mcmotion.hpp
    mcpers3c.cpp
    mcpers3c.hpp
    mcwtrans.cpp
    mcwtrans.hpp
    mczenith.cpp
    mczenith.hpp
    motchunk.cpp
    motchunk.hpp
    motplan.cpp
    motplan.hpp
    movespii.cpp
    movespin.cpp
    movespin.hpp
    persist.cpp
    persist.hpp
    phys.cpp
    phys.hpp
    rampacce.cpp
    rampacce.hpp
    sclplan.cpp
    sclplan.hpp
    ti2.cpp
    ti_motn.cpp
    timeangi.cpp
    timeangl.cpp
    timeangl.hpp
    timespin.cpp
    timespin.hpp
    timespni.cpp
    tiphys.cpp
    trace.hpp
)

add_library(phys OBJECT ${PHYS_SOURCES})
add_library(LibDev::phys ALIAS phys)

target_link_libraries(phys PUBLIC
    LibDev::device
    LibDev::render
)
